Updated typscript configuration, from now on it compiles the files to user defined 'compiledsources' folder;

--- a/src/main/webapp/my-styles.css
+++ b/src/main/webapp/my-styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: "Roboto", "Helvetica", "Arial", sansserif;
+    font-family: "Roboto", "Helvetica", "Arial", serif;
 }
 
 .tabcontent {
